2001-09-18  Derek Price  <dprice@collab.net>

	* doc/.cvsignore: Add several files generated by pdftex.

2001-09-18  Derek Price  <dprice@collab.net>

	* doc/Makefile.am (texi2html_TEXINFOS): Remove version.texi - AM
	includes it automatically.
	(texi2html.html): Include version.texi as a dependency.
	(texi2html.pdf): Use pdftex to create instead of ps2pdf - hyperlinks!

	* doc/Makefile.in: Regenerated.

2001-09-18  Derek Price  <dprice@collab.net>

	* configure.in: Bump package version number.
	* Makefile.am (AUTOMAKE_OPTIONS): Bump required Automake version to
	1.5.
	* doc/texinfo.tex: New File.
	* TODO: Add note about `make distcheck' being broken and about lack of
	a comprehensive test suite.

	* Makefile.in: Regenerated using Automake 1.5.
	* aclocal.m4: Ditto.
	* configure: Ditto.
	* doc/Makefile.in: Ditto.
	* doc/stamp-vti: Ditto.
	* doc/version.texi: Ditto.

2001-09-17  Derek Price  <dprice@collab.net>

	* texi2html.init (T2H_WORDS_FR, MONTH_NAMES_FR): Add French
	translations.
	(Patch from Dumas Patrice <dumas@centre-cired.fr>.)

2001-09-17  Derek Price  <dprice@collab.net>

	* texi2html.1.in (AVAILABILITY): Add detail.

2001-09-17  Derek Price  <dprice@collab.net>

	* .cvsignore: Add `texi2html.1'.

2001-09-17  Derek Price  <dprice@collab.net>

	* texi2html.1: Removed this file since it is generated by configure.

2001-08-10  Derek Price  <dprice@collab.net>

	* INTRODUCTION: Fix email addresses and links.
	* README: Ditto.
	* NEWS: Update.

2001-08-10  Derek Price  <dprice@collab.net>

	* doc/Makefile.am: Made a few changes so we can build in a dir other
	than $(srcdir).
	(Bug report from Richard Pixley <rpixley@zhone.com>.)

	* Makefile.am: Remove some useless comments.
	* doc/Makefile.am: Simplify some targets which Automake already knew
	how to handle.

	* aclocal.m4: Regenerated.
	* configure: Regenerated.
	* Makefile.in: Regenerated.
	* doc/Makefile.in: Ditto.

2001-01-20  Adrian Aichner  <adrian@xemacs.org>

	* INTRODUCTION (http): Typo fixes.