@@ -1,5 +1,11 @@
 2001-09-18  Derek Price  <dprice@collab.net>
 
+	* texi2html.pl (T2H_HOMEPAGE): Use new link.
+	(T2H_AUTHORS): Direct to dev@texi2html.cvshome.org for maintainer.
+	(T2H_ADDRESS): Default to "an unknown user".
+
+2001-09-18  Derek Price  <dprice@collab.net>
+
 	* doc/.cvsignore: Add several files generated by pdftex.
 
 2001-09-18  Derek Price  <dprice@collab.net>
